// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordStrengthMeter (snapshot) > matches hideLabel snapshot 1`] = `
<div>
  <div
    class="flex items-center gap-2"
  >
    <div
      aria-hidden="true"
      class="flex flex-1 gap-1"
    >
      <div
        class="h-1 flex-1 rounded-full transition-colors bg-emerald-600"
      />
      <div
        class="h-1 flex-1 rounded-full transition-colors bg-emerald-600"
      />
      <div
        class="h-1 flex-1 rounded-full transition-colors bg-emerald-600"
      />
      <div
        class="h-1 flex-1 rounded-full transition-colors bg-emerald-600"
      />
    </div>
    <span
      class="sr-only"
      role="status"
    >
      Password strength: 
      Strong
    </span>
  </div>
</div>
`;

exports[`PasswordStrengthMeter (snapshot) > matches strong snapshot 1`] = `
<div>
  <div
    class="flex items-center gap-2"
  >
    <div
      aria-hidden="true"
      class="flex flex-1 gap-1"
    >
      <div
        class="h-1 flex-1 rounded-full transition-colors bg-emerald-600"
      />
      <div
        class="h-1 flex-1 rounded-full transition-colors bg-emerald-600"
      />
      <div
        class="h-1 flex-1 rounded-full transition-colors bg-emerald-600"
      />
      <div
        class="h-1 flex-1 rounded-full transition-colors bg-emerald-600"
      />
    </div>
    <span
      class="text-xs font-medium tabular-nums text-emerald-600 dark:text-emerald-500"
    >
      Strong
    </span>
    <span
      class="sr-only"
      role="status"
    >
      Password strength: 
      Strong
    </span>
  </div>
</div>
`;

exports[`PasswordStrengthMeter (snapshot) > matches weak snapshot 1`] = `
<div>
  <div
    class="flex items-center gap-2"
  >
    <div
      aria-hidden="true"
      class="flex flex-1 gap-1"
    >
      <div
        class="h-1 flex-1 rounded-full transition-colors bg-destructive"
      />
      <div
        class="h-1 flex-1 rounded-full transition-colors bg-muted"
      />
      <div
        class="h-1 flex-1 rounded-full transition-colors bg-muted"
      />
      <div
        class="h-1 flex-1 rounded-full transition-colors bg-muted"
      />
    </div>
    <span
      class="text-xs font-medium tabular-nums text-destructive"
    >
      Weak
    </span>
    <span
      class="sr-only"
      role="status"
    >
      Password strength: 
      Weak
    </span>
  </div>
</div>
`;
